--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Create a Backyard Forest</title>
+  <title>Slideshow index</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      font-size: 1.7rem;
+      line-height: 2;
+      margin: 0 auto;
+      width: 50%;
+    }
+    a:link, a:visited {
+      color: blue;
+    }
+    a:hover {
+      color: #5d8223;
+    }
+  </style>
 </head>
 <body>
-  <h1>Create a Backyard Forest</h1>
-  <h2>Online forest garden course</h2>
-  <p>Holding page for online course 🙂</p>
+  <h1>The Backyard Forest</h1>
+  <h2><a href="">Online forest garden course</a></h2>
+  <ol>
+    <li><strong><a href="intro">Intro</a></strong> Why growing edible crops with nature is so important</li>
+    <li><strong><a href="plan">Plan</a></strong> Observations to make, wishes to list &amp; mapping your patch</li>
+    <li><strong><a href="design">Design</a></strong> How to put things in the right place</li>
+    <li><strong><a href="protect">Protect</a></strong> Windbreaks &amp; other tricks to protect your precious plants</li>
+    <li><strong><a href="veg">Perennial Veg</a></strong> Resilient &amp; low maintenance veg are on the menu</li>
+    <li><strong><a href="canopy">Canopy</a></strong> Plant the big trees, the canopy layer</li>
+    <li><strong><a href="prep">Ground Prep</a></strong> Ways to clear the ground, so as to plant your plants</li>
+    <li><strong><a href="shrubs">Shrubs &amp; Cover</a></strong> Shrubs away &amp; keep the ground covered</li>
+  </ol>
 </body>
 </html>
